--- a/part5/bloglist-frontend/src/index.css
+++ b/part5/bloglist-frontend/src/index.css
@@ -10,7 +10,12 @@ body {
   font-family: "Noto Sans", sans-serif;
 }
 
+label {
+  font-size: 0.9rem;
+}
+
 input {
+  display: block;
   padding: 0.5rem;
   min-width: 250px;
   border-radius: 0.25rem;
@@ -62,4 +67,7 @@ button:hover {
 }
 .mt-s {
   margin-top: 0.5rem;
+}
+.my-s {
+  margin: 0.5rem auto;
 }
